fix width on iphone

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -33,7 +33,7 @@ ol.overflow {
 
 @media all and (max-width: $mobileBreakpoint) {
   .page .page-header {
-    width: 96dvw;
+    width: 90dvw;
   }
 }
 
